# raytracing-console

./: CMakeLists.txt
src/: App.cpp  App.h  GameObject.cpp  GameObject.h  Pixel.cpp  Pixel.h  Plane.cpp  Plane.h  Ray.cpp  Ray.h  Scene.cpp  Scene.h  Screen.cpp  Screen.h  Sphere.cpp  Sphere.h  Torus.cpp  Torus.h  general.h  raytracing.cpp  vec.h
